--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,14 @@
     <plugins>
       <plugin>
         <groupId>org.mortbay.jetty</groupId>
-        <artifactId>maven-jetty-plugin</artifactId>
+        <artifactId>jetty-maven-plugin</artifactId>
+        <configuration>
+          <connectors>
+            <connector implementation="org.eclipse.jetty.server.bio.SocketConnector">
+              <port>8080</port>
+            </connector>
+          </connectors>
+        </configuration>
       </plugin>
     </plugins>
   </build>
